# Asteroidz

./: CMakeLists.txt  FEATURES.md  GEMINI.md  README.md
.cache/clangd/index/: SDL.c.85B539161AC12417.idx  SDL.h.DC13E26B746225E0.idx  SDL_RLEaccel.c.6B4C7CD6FFD880E4.idx  SDL_RLEaccel_c.h.6346B4D203A397B5.idx  SDL_alsa_audio.c.91CE3F3716ABB7C4.idx  SDL_alsa_audio.h.FF3209999DCF1174.idx  SDL_appid.c.5014ECAC819E0281.idx  SDL_appid.h.F0A5C097D7761EBE.idx  SDL_assert.c.0F2461A975CE24CB.idx  SDL_assert.h.5FD4D9E6388DCB42.idx  SDL_assert_c.h.6182F359018481AC.idx  SDL_asyncio.c.EBEB6668F5A101A0.idx  SDL_asyncio.h.0735E9F8D9615EFA.idx  SDL_asyncio_c.h.E518C124BC2361AE.idx  SDL_asyncio_generic.c.B8839B1FD7E2FB28.idx  SDL_asyncio_liburing.c.919BBB0E82D319B3.idx  SDL_atomic.c.E80D20F5AF257906.idx  SDL_atomic.h.9BD651EE3913E72E.idx  SDL_audio.c.5397846BA6E81A5B.idx  SDL_audio.h.32CE7A019B668A9B.idx  SDL_audio_c.h.663BFC21F94A503B.idx  SDL_audio_channel_converters.h.0A81338E0DBFBD02.idx  SDL_audiocvt.c.7F99B709C219FEE1.idx  SDL_audiodev.c.0059498D2B00AC4C.idx  SDL_audioqueue.c.909F5C830BC17900.idx  SDL_audioqueue.h.F56532E2379FD280.idx  SDL_audioresample.c.31FE9C605E59A8CF.idx  SDL_audioresample.h.F53F46A4B932F13C.idx  SDL_audiotypecvt.c.7E4B0012AB6FBF5E.idx  (+630 more)
include/: abilities.h  ai.h  assets.h  constants.h  game.h  input.h  particles.h  persistence.h  physics.h  renderer.h  structs.h  ui.h  utils.h  weapons.h  workers.h
src/: abilities.c  ai.c  assets.c  game.c  input.c  main.c  particles.c  persistence.c  physics.c  renderer.c  ui.c  utils.c  weapons.c  workers.c
